# robotframework-SikuliPlusLibrary

./: .gitignore  README.md  Sikuli.toml  argumentos_cli.cfg  pyproject.toml  robot.toml  setup.py
SikuliPlusLibrary/: __init__.py
SikuliPlusLibrary/decorators/: helper.py  roi.py  timeout.py
SikuliPlusLibrary/mixins/: __init__.py
old_SikuliPlusLibrary/: SikuliPlusLibrary.py
old_SikuliPlusLibrary/decorators/: roi.py  similarity.py
old_SikuliPlusLibrary/mixins/: VisionMixin.py
old_implementations/SikuliPlusLibrary_old/modules/: __init__.py  vision.py
old_implementations/old_SikuliPlusLibrary/decorators/: timeout.py
old_implementations/old_SikuliPlusLibrary/mixins/: KeyboardMixin.py
source/: constantes.py  keywords.robot
source/SikuliPlusLibrary/: __init__.py  config.py  helpers.py  locale_utils.py  main.py  signature_utils.py
source/SikuliPlusLibrary/decorators/: __init__.py  keyword_export.py
source/SikuliPlusLibrary/keywords_names/: en_US.toml  pt_BR.toml
source/SikuliPlusLibrary/mixins/: __init__.py  context_managers.py
source/SikuliPlusLibrary/modules/: vision.py
source/sikulipluslibrary/: ConfigMixin.py  Settings.py  SikuliPlusLibrary.py  SikuliPlusLibrary_old.py  VisionMixin.py
source/sikulipluslibrary/decorators/: roi.py  similarity.py
source/sikulipluslibrary/mixins/: ConfigMixin.py  MouseMixin.py  VisionMixin.py  __init__.py
src/SikuliPlusLibrary/: SikuliPlusLibrary.py  config.py  main.py  signature_utils.py
src/SikuliPlusLibrary/mixins/: vision_context.py
src/SikuliPlusLibrary/modules/: vision.py
src/SikuliPlusLibrary_old/: helpers.py  main.py
tests/: teste.robot
tests/robot/vision_module/: MultipleImagesExists.robot  WaitMultipleImages.robot  WaitOneOfMultipleImages.robot  WaitUntilImageAppear.robot  WaitUntilImageDisappear.robot  teste.robot
